syntax = "proto3";

package session;

import "google/protobuf/timestamp.proto";

option go_package = "./session";

service Films {
  rpc GetAllFilmsPreviews(AllFilmsPreviewsRequest) returns (AllFilmsPreviewsResponse) {}
  rpc GetFilmDataByUuid(FilmDataByUuidRequest) returns (FilmDataByUuidResponse) {}
  rpc GetFilmPreviewByUuid(FilmPreviewByUuidRequest) returns (FilmPreviewByUuidResponse) {}
  rpc RemoveFilmByUuid(RemoveFilmByUuidRequest) returns (RemoveFilmByUuidResponse) {}
  rpc GetActorDataByUuid(ActorDataByUuidRequest) returns (ActorDataByUuidResponse) {}
  rpc GetActorsByFilm(ActorsByFilmRequest) returns (ActorsByFilmResponse) {}
  rpc PutFavorite(PutFavoriteRequest) returns (PutFavoriteResponse) {}
  rpc DeleteFavorite(DeleteFavoriteRequest) returns (DeleteFavoriteResponse) {}
  rpc GetAllFavoriteFilms(GetAllFavoriteFilmsRequest) returns (GetAllFavoriteFilmsResponse) {}
  rpc GetAllFilmsByGenre(GetAllFilmsByGenreRequest) returns (GetAllFilmsByGenreResponse) {}
  rpc GetAllGenres(GetAllGenresRequest) returns (GetAllGenresResponse) {}
  rpc AddFilm(AddFilmRequest) returns (AddFilmResponse) {}
  rpc FindFilmsShort(FindFilmsShortRequest) returns (FindFilmsShortResponse) {}
  rpc FindFilmsLong(FindFilmsShortRequest) returns (FindFilmsLongResponse) {}
  rpc FindSerialsShort(FindFilmsShortRequest) returns (FindFilmsShortResponse) {}
  rpc FindSerialsLong(FindFilmsShortRequest) returns (FindFilmsLongResponse) {}
  rpc FindActorsShort(FindActorsShortRequest) returns (FindActorsShortResponse) {}
  rpc FindActorsLong(FindActorsShortRequest) returns (FindActorsLongResponse) {}
  rpc GetTopFilms(GetTopFilmsRequest) returns (GetTopFilmsResponse) {}
  rpc GetAllFilmComments(AllFilmCommentsRequest) returns (AllFilmCommentsResponse) {}
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse) {}
  rpc RemoveComment(RemoveCommentRequest) returns (RemoveCommentResponse) {}
}

message FilmPreview {
  string uuid = 1;
  string preview = 2;
  string title = 3;
  string director = 4;
  float avg_score = 5;
  uint64 scores_count = 6;
  uint32 duration = 7;
  uint32 age_limit = 8;
  bool is_serial = 9;
}

message Episode {
  string link = 1;
  string title = 2;
}

message Season {
  repeated Episode episodes = 1;
}

message Genre {
  string name = 1;
  string uuid = 2;
}

message FilmData {
  string uuid = 1;
  string preview = 2;
  string title = 3;
  string link = 4;
  string director = 5;
  float avg_score = 6;
  uint64 scores_count = 7;
  uint32 duration = 8;
  string data = 9;
  uint32 age_limit = 10;
  google.protobuf.Timestamp date = 11;
  repeated Genre genres = 12;
  bool is_serial = 13;
  repeated Season seasons = 14;
}

message ActorData {
  string uuid = 1;
  string name = 2;
  string avatar = 3;
  google.protobuf.Timestamp birthday = 4;
  string career = 5;
  string spouse = 6;
  repeated FilmPreview films_previews = 7;
  string birthplace = 8;
  uint32 height = 9;
}

message ActorPreview {
  string uuid = 1;
  string name = 2;
  string avatar = 3;
}

message StatusMessage {
  uint32 code = 1;
}

message AllFilmsPreviewsRequest {}

message AllFilmsPreviewsResponse {
  repeated FilmPreview films = 1;
}

message FilmDataByUuidRequest {
  string uuid = 1;
}

message FilmDataByUuidResponse {
  FilmData film_data = 1;
}

message FilmPreviewByUuidRequest {
  string uuid = 1;
}

message FilmPreviewByUuidResponse {
  FilmPreview film_preview = 1;
}

message AllFilmCommentsRequest {
  string film_uuid = 1;
}

message AllFilmCommentsResponse {
  repeated Comment comments = 1;
}

message AllFilmActorsRequest {
  string uuid = 1;
}

message AllFilmActorsResponse {
  repeated ActorPreview actor_previews = 1;
}

message RemoveFilmByUuidRequest {
  string uuid = 1;
}

message RemoveFilmByUuidResponse {}

message ActorDataByUuidRequest {
  string uuid = 1;
}

message ActorDataByUuidResponse {
  ActorData actor = 1;
}

message ActorsByFilmRequest {
  string uuid = 1;
}

message ActorsByFilmResponse {
  repeated ActorPreview actors = 1;
}

message PutFavoriteRequest {
  string film_uuid = 1;
  string user_uuid = 2;
}

message PutFavoriteResponse {}

message DeleteFavoriteRequest {
  string film_uuid = 1;
  string user_uuid = 2;
}

message DeleteFavoriteResponse {}

message GetAllFavoriteFilmsRequest {
  string user_uuid = 1;
}

message GetAllFavoriteFilmsResponse {
  repeated FilmPreview films = 1;
}

message GetAllFilmsByGenreRequest {
  string genre_uuid = 1;
}

message GetAllFilmsByGenreResponse {
  repeated FilmPreview films = 1;
}

message GetAllGenresRequest {}

message GenreFilms {
  string genre = 1;
  string genre_uuid = 2;
  repeated FilmPreview films = 3;
}

message GetAllGenresResponse {
  repeated GenreFilms genres = 1;
}

message FilmDataToAdd {
  string title = 1;
  bool is_serial = 2;
  string preview = 3;
  string director = 4;
  string data = 5;
  uint32 ageLimit = 6;
  google.protobuf.Timestamp publishedAt = 7;
  repeated string genres = 8;
  uint32 duration = 9;
  string link = 10;
  repeated Season seasons = 11;
}

message ActorDataToAdd {
  string name = 1;
  string avatar = 2;
  google.protobuf.Timestamp birthdayAt = 3;
  string career = 4;
  uint32 height = 5;
  string birthPlace = 6;
  string spouse = 7;
}

message DirectorDataToAdd {
  string name = 1;
  string avatar = 2;
  google.protobuf.Timestamp birthday = 3;
}

message FilmToAdd {
  FilmDataToAdd filmData = 1;
  repeated ActorDataToAdd actors = 2;
  DirectorDataToAdd director = 3;
}

message AddFilmRequest {
  FilmToAdd filmData = 1;
}

message AddFilmResponse {}

message FindFilmsShortRequest {
  string key = 1;
  uint32 page = 2;
}

message FindFilmsShortResponse {
  repeated FilmPreview films = 1;
}

message FindFilmLong {
  string uuid = 1;
  bool is_serial = 2;
  string preview = 3;
  string title = 4;
  string director = 5;
  float avg_score = 6;
  uint64 scores_count = 7;
  uint32 duration = 8;
  uint32 age_limit = 9;
  google.protobuf.Timestamp date = 11;
  repeated Genre genres = 12;
}

message FindFilmsLongResponse {
  repeated FindFilmLong films = 1;
  uint32 count = 2;
}

message FindActorsShortRequest {
  string key = 1;
  uint32 page = 2;
}

message FindActorsShortResponse {
  repeated ActorPreview actors = 1;
}

message ActorPreviewLong {
  string uuid = 1;
  string name = 2;
  string avatar = 3;
  google.protobuf.Timestamp birthday = 4;
  string career = 5;
  string birthPlace = 6;
}

message FindActorsLongResponse {
  repeated ActorPreviewLong actors = 1;
  uint32 count = 2;
}

message TopFilm {
  string uuid = 1;
  bool is_serial = 2;
  string preview = 3;
  string title = 4;
  string data = 5;
}

message GetTopFilmsRequest {}

message GetTopFilmsResponse {
  repeated TopFilm films = 1;
}

message Comment {
  string uuid = 1;
  string film_uuid = 2;
  string author_uuid = 3;
  string author = 4;
  string text = 5;
  uint32 score = 6;
  google.protobuf.Timestamp added_at = 7;
}

message CommentToAdd {
  string film_uuid = 1;
  string author_uuid = 2;
  string text = 3;
  uint32 score = 4;
}

message CommentToRemove {
  string film_uuid = 1;
  string author_uuid = 2;
}

message AddCommentRequest {
  CommentToAdd comment = 1;
}

message AddCommentResponse {}

message RemoveCommentRequest {
  CommentToRemove comment = 1;
}

message RemoveCommentResponse {}
